--- a/clone/index.css
+++ b/clone/index.css
@@ -1,3 +1,7 @@
+li{
+    display: inline-block;
+    text-align: center;
+}
 header{
     width: 980px;
     height: 70px;
@@ -52,19 +56,34 @@ header .gnb ul.gnbm span{
 }
 
 /*fixmenu*/
+.submenu_title{
+    position: relative;
+    left: 265px;
+    background-color: aqua;
+    width: 60px;
+    height: 25px;
+    margin-right: 30px;
+    margin-top: 10px;
+    text-align: center;
+}
 
+
+
+ /*
 header .fixmenu{
     position: absolute;
     width: 980px;
+    height: 100px;
     font-size: 17px;
     top: 88px;
+    background-color: black ;
 }
 
 header .fixmenu ul.submenu{
     text-align: center;
 }
 
-header .fixmenu ul.submenu li{
+header .fixmenu ul.submenu{
     display: inline-block;
     margin-right: 30px;
     position: relative;
@@ -74,17 +93,20 @@ header .fixmenu ul.submenu li::before{
     width: 2px;
     height: 20px;
     position: absolute;
-    /* top: 0; */
-    /* bottom: 0; */
     left: -20px;
     background-color: #e5e5e5;
-    /* margin: auto; */
 }
 header .fixmenu ul.submenu li:first-child::before{
     display: none;
 }
 
-/* logo*/
+header .fixmenu ul.submenu li:hover{
+    width: 980px;
+    height: 30px;
+    background-color: navy;
+} */
+
+/*logo*/
 header .logo>img{
     height: 37px;
     width: 219px;
