--- a/clone/index.css
+++ b/clone/index.css
@@ -2,122 +2,148 @@ li{
     display: inline-block;
     text-align: center;
 }
+
+ul{
+    /* display: inline-block; */
+    text-align: center;
+}
+body{
+    display: flex;
+    justify-content: center; 
+
+}
 header{
     width: 980px;
-    height: 70px;
-    margin: auto;
+    height: 55px;
+    position: relative;
     font-size: 12px;
+    border-bottom: 3px solid #e5e5e5;    
+    top: 10px;
 }
 
-header .gnb{
+header .submenu .gnb{
     height: 70px;
-    border-bottom: 3px solid #e5e5e5;
+    width: 100%;
     position: relative;
+    display: inline-block;
 }
 
 /* gnb social */
-header .gnb ul.social{
+header .submenu .gnb ul.social{
+    /* float: left; */
+    /* margin-top: 40px; */
+    top: 30px;
+    margin-top: 30px;
     float: left;
-    margin-top: 40px;
     
 }
 
-header .gnb ul.social li{
-    display: inline-block;
-    margin-left: 20px;
+header .submenu .gnb ul.social li{
+    margin-left: 15px;
+ 
 }
+
 
 /* gnb info */
-
-header .gnb ul.info {
-    float: right;
-    margin-top: 40px;
-}
-
-header .gnb ul.info li{
-    display: inline-block;
-    margin-left: 20px;
-}
-
-/* gnb submenu */
-header .gnb ul.gnbm{
+header .submenu .gnb ul.info {
     position: absolute;
-    right: 25px;
-    top: 88px;
+    top: 30px;
+    right: 0px;
+    
+    
 }
 
-header .gnb ul.gnbm li{
-    display: inline-block;
-    margin-right: 20px;
+header .submenu .gnb ul.info li{
+    margin-right: 15px;
+    
+
 }
-header .gnb ul.gnbm span{
+
+/* gnb gnsm */
+header .gnb ul.gnsm{
+    position: absolute;
+    right: 30px;
+    top: 77px;
+}
+
+header .gnb ul.gnsm li{
+    display: inline-block;
+    margin-right: 16px;
+}
+header .gnb ul.gnsm span{
     position: absolute;
     top: -5px;
 }
 
 /*fixmenu*/
-.submenu_title{
+.fixmenu{
+    width: 1000px;
+    height: 100px;
+    /* background-color: aqua; */
     position: relative;
-    left: 265px;
-    background-color: aqua;
+}
+
+.fixmenu ul.menu_list{
+}
+
+.fixmenu .menu_list .menu{
+    position: relative;
+    left: -20px;
+}
+
+.fixmenu .menu_list .menu .name{
+    margin-left: 15px;
+    font-size: 14px;
     width: 60px;
     height: 25px;
-    margin-right: 30px;
-    margin-top: 10px;
-    text-align: center;
+    justify-content: center;
+ 
 }
 
+.fixmenu .menu_list .menu .name:hover + .menu_title .menu_content li {
+    /* height: 30px;*/
+    width: 100%; 
+    background-color: aqua;
+    cursor: pointer;
 
-
- /*
-header .fixmenu{
-    position: absolute;
-    width: 980px;
-    height: 100px;
-    font-size: 17px;
-    top: 88px;
-    background-color: black ;
 }
 
-header .fixmenu ul.submenu{
-    text-align: center;
+.fixmenu .menu_list .menu .menu_title .menu_content{
+    background-color: aquamarine;
+    
 }
 
-header .fixmenu ul.submenu{
-    display: inline-block;
-    margin-right: 30px;
-    position: relative;
+.fixmenu .menu_list .menu .menu_title .menu_content .inner{
+    /* width: 200px; 
+    background-color: yellow;
+     */
 }
-header .fixmenu ul.submenu li::before{
-    content:" ";
-    width: 2px;
-    height: 20px;
-    position: absolute;
-    left: -20px;
-    background-color: #e5e5e5;
-}
-header .fixmenu ul.submenu li:first-child::before{
-    display: none;
+.fixmenu .menu_list .menu .menu_title .menu_content .inner li{
+    /* background-color: red;
+    margin-left: 20px; */
 }
 
-header .fixmenu ul.submenu li:hover{
-    width: 980px;
-    height: 30px;
-    background-color: navy;
-} */
+.fixmenu .menu_list .menu .menu_title .menu_content .inner ul{
+    /* background-color: tomato;
+    margin-left: 20px; */
+}
+/* 
+ */
+
 
 /*logo*/
-header .logo>img{
+header .submenu .logo>img{
     height: 37px;
     width: 219px;
 
 }
 
-header .logo{
+header .submenu .logo{
+
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: 50%;
-    margin-left: -109px;
+    margin-left: -120px;
 }
 
 
